rmb-parser/src/snapshots/rmb_parser__expression__tests__immutable_constant-2.snap
---
source: rmb-parser/src/expression.rs
expression: variables_ast
---
const hello = (+ 1 (* 2 3));
